[project]
name = "com_digitalruiz_shopify_http_client"
version = "0.0.8"
authors = [
  { name="Reyes Ruiz", email="reyes@digitalruiz.com" },
]
description = "A custom http client for shopify"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  'requests',
  'python-dotenv',
  'com-digitalruiz-my-logger',
]

[project.urls]
"Homepage" = "https://github.com/reyesruiz/shopify_http_client"
"Bug Tracker" = "https://github.com/reyesruiz/shopify_http_client/issues"
